tests/ui/issues/issue-151903.stderr
error[E0502]: cannot borrow `buffer` as immutable because it is also borrowed as mutable
  --> $DIR/issue-151903.rs:24:36
   |
LL |     let _ = match Box::pin(read_foo(&mut *buffer)).as_mut().poll(cx) {
   |                   --------------------------------
   |                   |                       |
   |                   |                       mutable borrow occurs here
   |                   a temporary with access to the mutable borrow is created here ...
LL |         Poll::Ready(Ok(foo)) => {
LL |             println!("buffer: {}", buffer);
   |                                    ^^^^^^ immutable borrow occurs here
...
LL |     };
   |      - ... and the mutable borrow might be used here, when that temporary is dropped and runs the destructor for type `Pin<Box<impl Future<Output = Result<Foo<'_>, ()>>>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
